<resources>
    <string name="app_name">WageCalculator</string>
    <string name="about">About Me</string>
    <string name="title">Wage Calculator</string>
    <string name="hours_worked_hint">Hours Worked</string>
    <string name="hourly_wage_hint">Wage Per Hour</string>
    <string name="gb_id">101307949</string>
    <string name="name">Marco Stevanella</string>
    <string name="button_calculate">Calculate</string>
    <string name="gross">Gross: </string>
    <string name="tax">Tax: </string>
    <string name="net">Net: </string>
    <string name="back_to_calc">Back</string>
</resources>